Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35073

-Wmaybe-uninitialized in result of spider_conn_first_link_idx

Details

    Description

      reported by marko. Like in MDEV-33220, may require -Og to reproduce

      /home/marko/11.2/storage/spider/spd_conn.cc: In function 'int spider_conn_first_link_idx(THD*, long int*, long int*, uint*, int, int)':
      /home/marko/11.2/storage/spider/spd_conn.cc:3689:21: warning: 'result' may be used uninitialized [-Wmaybe-uninitialized]
       3689 |   DBUG_PRINT("info",("spider first link_idx=%d", result));
      

      Attachments

        Issue Links

          Activity

            ycp Yuchen Pei added a comment -

            Hi marko, ptal thanks

            690f8a91f9b upstream/bb-11.2-mdev-35073 MDEV-35073 Fix -Wmaybe-uninitialized in spider_conn_first_link_idx
            

            ycp Yuchen Pei added a comment - Hi marko , ptal thanks 690f8a91f9b upstream/bb-11.2-mdev-35073 MDEV-35073 Fix -Wmaybe-uninitialized in spider_conn_first_link_idx

            Thank you, this looks OK to me. As far as I can tell, the compiler warning was introduced in MDEV-29676. If there is a similar potential error in earlier versions, it would require a different fix.

            marko Marko Mäkelä added a comment - Thank you, this looks OK to me. As far as I can tell, the compiler warning was introduced in MDEV-29676 . If there is a similar potential error in earlier versions, it would require a different fix.
            ycp Yuchen Pei added a comment -

            Thanks for the review - pushed 690f8a91f9bf5a76a3be4d84c23ad1026b483e8b to 11.2.

            Yes it was introduced in a refactoring as part of MDEV-29676 and is unique to the refactored code.

            ycp Yuchen Pei added a comment - Thanks for the review - pushed 690f8a91f9bf5a76a3be4d84c23ad1026b483e8b to 11.2. Yes it was introduced in a refactoring as part of MDEV-29676 and is unique to the refactored code.

            People

              ycp Yuchen Pei
              ycp Yuchen Pei
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.