MDEV-35073 Fix -Wmaybe-uninitialized in spider_conn_first_link_idx

Default result to "no eligible servers".